Fixed user names not showing, edit channels and added emojis

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #005fff;
+    --primary-color: #6200ff;
     --primary-color-alpha: #005fff1a;
   }
   
@@ -201,7 +201,7 @@
   .str-chat-channel-list {
     height: fit-content;
     margin-bottom: 8px;
-    background-color: #005fff;
+    background-color: var(--primary-color);
   }
   
   .str-chat-channel {
